--- a/applications-2.json
+++ b/applications-2.json
@@ -15,12 +15,12 @@
         "S": 0,
         "Su": 0
       },
-      "question": [
+      "question": 
         {
           "text": "Have you ever been convicted of a felony?",
           "answer": "No"
         }
-      ]
+      
     },
     {
       "id": 2,
@@ -37,12 +37,12 @@
         "S": 0,
         "Su": 0
       },
-      "question": [
+      "question": 
         {
           "text": "Have you ever been convicted of a felony?",
           "answer": "Yes"
         }
-      ]
+      
     },
     {
       "id": 3,
@@ -59,12 +59,12 @@
         "S": 0,
         "Su": 0
       },
-      "question": [
+      "question": 
         {
           "text": "Are you authorized to work in the United States?",
           "answer": "Yes"
         }
-      ]
+      
     },
     {
       "id": 4,
@@ -81,12 +81,12 @@
         "S": 0,
         "Su": 0
       },
-      "question": [
+      "question": 
         {
           "text": "Are you authorized to work in the United States?",
           "answer": "Yes"
         }
-      ]
+      
     }
   ]
 }
